 [build-system]
 requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "sklekmeans"
 version = "0.1.2"
 description = "Equilibrium K-Means (EKMeans) clustering algorithms compatible with scikit-learn"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "BSD-3-Clause"}
 authors = [
   {name = "Yudong He", email = "yhebh@connect.ust.hk"}
 ]
 classifiers = [
   "License :: OSI Approved :: BSD License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
   "Topic :: Scientific/Engineering :: Information Analysis",
   "Intended Audience :: Science/Research",
]
 dependencies = [
   "numpy>=1.23",
   "scikit-learn>=1.4",
]

 [project.optional-dependencies]
 dev = [
   "pytest>=7",
   "pytest-cov",
   "ruff>=0.5",
   "black>=24.0",
]
 docs = [
   "sphinx>=7",
   "pydata-sphinx-theme",
   "sphinx-gallery",
   "sphinx-design",
   "sphinx-copybutton",
   "sphinx-prompt",
   "numpydoc",
   "matplotlib",
]
speed = [
  "numba>=0.59"
]
all = ["sklekmeans[dev,docs,speed]"]

 [project.urls]
 Homepage = "https://github.com/ydcnanhe/sklearn-ekmeans"
 Documentation = "https://ydcnanhe.github.io/sklearn-ekmeans"
 Source = "https://github.com/ydcnanhe/sklearn-ekmeans/tree/main/sklekmeans"

 [tool.black]
 line-length = 88
 target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "W",  # warnings
]
ignore = [
  "E203",  # whitespace before ':'
  "E266",  # too many leading '#' for block comment
  "E501",  # line too long
  "W293",  # blank line contains whitespace (temporarily ignored)
]

[tool.ruff.lint.isort]
known-first-party = ["sklekmeans"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sklekmeans*"]
exclude = [
  "doc*",
  "examples*",
  "benchmark*",
  "test*",
  "tests*",
  "skltemplate*",
  "*.egg-info*",
]

 [tool.pytest.ini_options]
 addopts = "-v --doctest-modules --cov=sklekmeans --cov-report=term-missing"
 testpaths = ["test"]
 filterwarnings = [
   "error::FutureWarning",
   "ignore::UserWarning",
]
